--- a/css/styles.css
+++ b/css/styles.css
@@ -20204,7 +20204,7 @@ header nav .burger i, header .navbar-menu .burger i {
 }
 
 .hero {
-  background-image: url("../images/productivity-image.png");
+  background-image: url("../images/hero.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
