--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -166,7 +166,7 @@ header {
 }
 
 .hero {
-    background-image: url('../images/hero.webp'); 
+    background-image: url('../images/hero-banner.webp'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
